data/usersCode/sadefcwed/question1/error.txt
/home/gauravghati/clash/data/usersCode/sadefcwed/question1/code1-1.cpp:1:1: error: ‘vsdfvsdfsd’ does not name a type
 vsdfvsdfsd
 ^~~~~~~~~~
